--- a/dog_profile_demo/templates/index.html
+++ b/dog_profile_demo/templates/index.html
@@ -60,7 +60,9 @@
         {% endif %}
       </td>
 
-      <td>{{ d['name'] }}</td>
+      <td>
+        <a href="{{ url_for('detail', dog_id=d['id']) }}">{{ d['name'] }}</a>
+      </td>
       <td>{{ d['age'] }}</td>
       <td>{{ d['size'] }}</td>
 
@@ -79,7 +81,10 @@
       <td>{{ d['status'] }}</td>
 
       <td class="actions">
+        <a href="{{ url_for('detail', dog_id=d['id']) }}">View</a>
+        &nbsp;|&nbsp;
         <a href="{{ url_for('edit', dog_id=d['id']) }}">Edit</a>
+        &nbsp;|&nbsp;
         <a href="{{ url_for('delete', dog_id=d['id']) }}"
            onclick="return confirm('Delete this dog?');">
           Delete
@@ -95,3 +100,4 @@
 {% endif %}
 
 {% endblock %}
+
